snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1.jar.sha256
a566a1dc4c752f2bbc4b8d116f317397cb4e7e657f9e445f2792166504d9ed36